1.1.1
-----
- Set track volume command

1.1.0
-----
- Instrument specific arpeggio support
- Tutka now quits after the song has been played when playing a song without the GUI (-p option)
- Hold values greater than 127 now work as expected
- MIDI message reception now works as expected

1.0.5
-----
- MIDI controller slides are now smooth regardless of the magnitude of the slide
- Confirmation dialog is now shown before creating a new song if the current song has been modified

1.0.4
-----
- Non-MIDI related commands now work even if no note has been played on the channel
- Setting the tempo and ticks per line using player commands now affect the song properties dialog
- Tempo is no longer incorrectly sent over MIDI

1.0.3
-----
- Song is now considered to be changed when the playing sequence or section contents change
- Track statuses are now properly reset when loading a new song or notes are stopped
- Several fixes to the tracker widget appearance in various situations
- Significant improvements to the tracker widget redrawing performance
- Support for loading MMD0 and MMD1 songs

1.0.2
-----
- Song changed status is now shown in the main window title bar
- A confirmation dialog is now shown before quitting if the song has been modified
- Fixes to keyboard event handling when menus are open
- Long track names overlapping other track names was fixed

1.0.1
-----
- Qt4 support was fixed
- Track name changes are now immediately reflected in the main window

1.0.0
-----
- Properly use a monospace font on Mac OS X

0.99.1
------
- RELAX NG schema for the file format
- Crash fixes
- UI update fixes
- High resolution icons both on Linux and Mac OS X

0.99.0
------
- Rewritten in C++ and Qt
- Support for Mac OS X
- Czech localization
- Save window positions on exit
- Various bug fixes

0.12.5
------
- Insert/delete track functionality was implemented

0.12.4
------
- Tracker widget refreshing was improved
- A bug in copy/paste functionality was fixed