@@ -163,6 +163,7 @@ of command pages in a block can be changed using the Block List window.
 <tr><td>0E</td><td>Set ticks per line/Stop</td><td>00-FF</td></tr>
 <tr><td>0F</td><td>Set tempo/Stop</td><td>00-FF</td></tr>
 <tr><td>1C</td><td>Set/slide track volume</td><td>00-7F (slide 80-FF)</td></tr>
+<tr><td>2C</td><td>Set/slide instrument volume</td><td>00-7F (slide 80-FF)</td></tr>
 <tr><td>80-FF</td><td>Set/slide MIDI controller value</td><td>00-7F (slide 80-FF)</td></tr>
 </tbody>
 </table>
