@@ -1,6 +1,7 @@
 1.1.1
 -----
 - Set track volume command
+- Set instrument volume command
 
 1.1.0
 -----
